--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
   
   <p> It is feeling A little Better Now <a href="https://www.joincake.com/blog/hope-you-feel-better"> </a></p>
   <p> But how will it feel tomorrow? <a href="/feelings.html"></a> </p>
-  <p> It comes and goes like the melody of the Blues </p>
+    <p> It comes and goes like the melody of the Blues</p>
+    <p> Yet, you can find clues </p> 
+    <p> this feeling may be a ruse</p>
+    <p> it is cold then warm </p>
+    <p> High then low</p>
+        <P> I pray I wont stay below.</p>
   
 <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.swncdn.com%2Fcms%2FCROSSCARDS%2F16940-are-you-feeling-better-800x400.jpg&imgrefurl=https%3A%2F%2Fwww.crosscards.com%2Fcards%2Fcare-and-encouragement%2Fget-well%2Fare-you-feeling-better.html&tbnid=TZyzUhlDnn548M&vet=12ahUKEwjjhtGN9oD2AhVZJ80KHcfVCrwQMygBegUIARDBAQ..i&docid=1rLWojvQCKUyZM&w=550&h=320&q=are%20you%20feeling%20better&client=safari&ved=2ahUKEwjjhtGN9oD2AhVZJ80KHcfVCrwQMygBegUIARDBAQ">  
-  
-  </body>
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fquotestats.com%2Ftopic%2Fi-am-feeling-better-now-quotes%2F&psig=AOvVaw11poXvF7bnPPpoqO-omZaj&ust=1645022735964000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNjIqbj5gfYCFQAAAAAdAAAAABAD">
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdepositphotos.com%2Fstock-photos%2Ffeeling-better.html&psig=AOvVaw11poXvF7bnPPpoqO-omZaj&ust=1645022735964000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNjIqbj5gfYCFQAAAAAdAAAAABAO"> 
+<img src=" https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.behappynowsupport.com%2Fhow-to-feel-a-tiny-bit-better-even-when-things-kind-of-suck&psig=AOvVaw11poXvF7bnPPpoqO-omZaj&ust=1645022735964000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNjIqbj5gfYCFQAAAAAdAAAAABAJ"> 
+
+</body>
