--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
   
   <h1>Github Poetry</h1> 
-  <h2. My Generative Poem on the last Text That Ive Sent Using Google and Github</h2>
+  <h2> My Generative Poem on the last Text That Ive Sent Using Google and Github</h2>
   
   <p> It is feeling A little Better Now <a href="https://www.joincake.com/blog/hope-you-feel-better"> </a></p>
   <p> But how will it feel tomorrow? <a href="/feelings.html"></a> </p>
